--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "lint-staged": "^15.2.2",
     "prettier": "3.2.5",
     "typescript": "^5.2.2",
+    "validate-branch-name": "^1.3.0",
     "vite": "^5.2.0"
   }
 }
