--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "prettier": "3.2.5",
     "typescript": "^5.2.2",
     "validate-branch-name": "^1.3.0",
-    "vite": "^5.2.0"
+    "vite": "^5.2.0",
+    "vite-tsconfig-paths": "^4.3.2"
   }
 }
