--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "typescript": "^5.2.2",
     "validate-branch-name": "^1.3.0",
     "vite": "^5.2.0",
+    "vite-tsconfig-paths": "^4.3.2"
     "vitest": "^1.6.0"
   }
 }
