--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "eslint-plugin-react-refresh": "^0.4.6",
     "eslint-plugin-testing-library": "^6.2.2",
     "husky": "^9.0.11",
+    "jsdom": "^24.0.0",
     "lint-staged": "^15.2.2",
     "prettier": "3.2.5",
     "typescript": "^5.2.2",
