--- a/package.json
+++ b/package.json
@@ -29,6 +29,8 @@
     "zustand": "^4.5.2"
   },
   "devDependencies": {
+    "@commercetools/platform-sdk": "^7.8.0",
+    "@commercetools/sdk-client-v2": "^2.5.0",
     "@testing-library/react": "^15.0.6",
     "@types/react": "^18.2.66",
     "@types/react-dom": "^18.2.22",
@@ -49,8 +51,11 @@
     "eslint-plugin-react-refresh": "^0.4.6",
     "eslint-plugin-testing-library": "^6.2.2",
     "husky": "^9.0.11",
+    "install": "^0.13.0",
+    "isomorphic-fetch": "^3.0.0",
     "jsdom": "^24.0.0",
     "lint-staged": "^15.2.2",
+    "npm": "^10.7.0",
     "prettier": "3.2.5",
     "typescript": "^5.2.2",
     "validate-branch-name": "^1.3.0",
