--- a/.lintstagedrc.json
+++ b/.lintstagedrc.json
@@ -1,3 +1,3 @@
 {
-  "*.{css,scss,cjs,js,mjs,jsx,ts,tsx}": ["npm run format", "npm run lint"]
+  "*.{cjs,js,mjs,jsx,ts,tsx}": ["npm run format", "npm run lint"]
 }
