--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
     "@emotion/styled": "^11.11.5",
     "@mui/icons-material": "^5.15.17",
     "@mui/material": "^5.15.16",
+    "@mui/x-date-pickers": "^7.5.0",
     "@tanstack/react-query": "^5.34.1",
+    "dayjs": "^1.11.11",
     "eslint-plugin-vitest": "^0.4.1",
     "isomorphic-fetch": "^3.0.0",
     "react": "^18.2.0",
