--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
   "devDependencies": {
     "@hookform/devtools": "^4.3.1",
     "@hookform/resolvers": "^3.3.4",
+    "@mui/lab": "^5.0.0-alpha.170",
     "@tanstack/react-query-devtools": "^5.35.5",
     "@testing-library/react": "^15.0.6",
     "@types/react": "^18.2.66",
