--- a/package.json
+++ b/package.json
@@ -38,7 +38,9 @@
     "@hookform/resolvers": "^3.3.4",
     "@mui/lab": "^5.0.0-alpha.170",
     "@tanstack/react-query-devtools": "^5.35.5",
+    "@testing-library/jest-dom": "^6.4.5",
     "@testing-library/react": "^15.0.6",
+    "@testing-library/user-event": "^14.5.2",
     "@types/react": "^18.2.66",
     "@types/react-dom": "^18.2.22",
     "@typescript-eslint/eslint-plugin": "^7.2.0",
